--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -235,4 +235,29 @@ span.bar_line {
   left: 0;
   top: 0;
   // z-index: 998;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+/* bottom Box style code */
+.bt_box {
+  width: 100%;
+  height: 330px;
+  background: #fff;
+  position: absolute;
+  bottom: 0;
+  border-radius: 15px 15px 0 0;
+  overflow: hidden;
+  span {
+    width: 100%;
+    color: #fff;
+    background: #547c61;
+    padding: 10px;
+    font-size: 18px;
+    justify-content: center;
+    display: flex;
+  }
 }
