--- a/css/style.css
+++ b/css/style.css
@@ -255,3 +255,29 @@ span.bar_line:nth-child(2) {
   left: 0;
   top: 0;
 }
+.map_img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* bottom Box style code */
+.bt_box {
+  width: 100%;
+  height: 330px;
+  background: #fff;
+  position: absolute;
+  bottom: 0;
+  border-radius: 15px 15px 0 0;
+  overflow: hidden;
+}
+.bt_box span {
+  width: 100%;
+  color: #fff;
+  background: #547c61;
+  padding: 10px;
+  font-size: 18px;
+  justify-content: center;
+  display: flex;
+}
