--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -42,6 +42,13 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  &#detail_page {
+    height: auto;
+    overflow: auto;
+    .wrap {
+      overflow-y: auto;
+    }
+  }
 }
 .clearfix:after {
   content: "";
@@ -259,5 +266,76 @@ span.bar_line {
     font-size: 18px;
     justify-content: center;
     display: flex;
+  }
+}
+
+// Owl arousel Box style code
+.carousel_container {
+  max-width: 1140px;
+  padding: 0 15px;
+  margin: auto;
+  width: 100%;
+  // height: 300px;
+  .carousel_item {
+    margin: 10px 0;
+  }
+  .item_card {
+    box-shadow: 0 0 3px #547c61;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    font-weight: 500;
+    border: 1px solid #eee;
+    flex-direction: column;
+    padding: 10px 20px;
+    .sl_img {
+      width: 100%;
+      height: 100px;
+      overflow: hidden;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .sl_txt {
+      width: 100%;
+      height: auto;
+      h2 {
+        font-size: 16px;
+        font-weight: 500;
+        text-align: center;
+        margin-top: 10px;
+        width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
+      p {
+        font-size: 12px;
+        color: #777;
+        margin: 5px 0;
+        text-align: center;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
+    }
+    .sl_icons {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        width: 20%;
+        padding: 10px;
+      }
+      em {
+        font-style: normal;
+        font-size: 11px;
+        color: #777;
+      }
+    }
   }
 }
