0812 검색기능 구현 & 시작 랜딩페이지

--- a/css/animation.css
+++ b/css/animation.css
@@ -75,3 +75,21 @@
     transform: scale(1);
   }
 }
+@keyframes start {
+}
+@keyframes scale-up {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  45% {
+    transform: scale(1.1);
+  }
+  70% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
