--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -8,6 +8,9 @@ html {
   width: 100%;
   height: 99.9%;
   overflow: hidden;
+  &#detail_html {
+    overflow: auto;
+  }
 }
 a {
   text-decoration: none;
@@ -47,6 +50,7 @@ body {
     overflow: auto;
     .wrap {
       overflow-y: auto;
+      height: auto;
     }
   }
 }
@@ -71,7 +75,7 @@ body {
 header {
   background: #547c61;
   padding: 15px 0;
-  z-index: 999;
+  z-index: 1000;
   position: relative;
   a {
     font-size: 18px;
@@ -81,6 +85,30 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+  &.sticky {
+    position: fixed;
+    width: 100%;
+  }
+  .menu {
+    position: absolute;
+    top: 100%;
+    display: flex;
+    flex-direction: column;
+    background: #547c61;
+    right: 5%;
+    display: none;
+    &.active {
+      display: block;
+    }
+    a {
+      width: 50px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-top: 1px solid #ccc;
+    }
   }
 }
 
@@ -132,6 +160,47 @@ span.bar_line {
   width: 100%;
 }
 
+// landing animation style code
+#landing {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #547c61;
+  top: 0;
+  left: 0;
+  z-index: 1001;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  // overflow: hidden;
+  &.start {
+    animation: start 0.5s 1;
+    animation-fill-mode: forwards;
+  }
+  .landing_logo {
+    background: #fff;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    border-radius: 50%;
+    animation: scale-up 1s 1;
+
+    img {
+      width: 60%;
+    }
+  }
+  h2 {
+    color: #fff;
+    font-weight: 400;
+    font-size: 16px;
+    margin: 10px 0;
+  }
+}
+
 // contents bar style code
 .contents_bar {
   padding: 70px 0;
@@ -148,6 +217,8 @@ span.bar_line {
     border-radius: 20px;
     background: #fff;
     align-items: center;
+    position: relative;
+    z-index: 999;
     input {
       height: 30px;
       padding: 20px;
@@ -337,5 +408,111 @@ span.bar_line {
         color: #777;
       }
     }
+  }
+}
+
+/*detail page style code */
+.details {
+  width: 100%;
+  height: auto;
+  position: relative;
+  .detail_bg {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    position: relative;
+    img {
+      width: 100%;
+    }
+    .radi_bar {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 15px;
+      background: #f4f4f4;
+      border-radius: 15px 15px 0 0;
+    }
+  }
+  .detail_contents {
+    width: 100%;
+    height: auto;
+    background: #f4f4f4;
+  }
+  .detail_wrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 10px;
+  }
+  .detail_tit {
+    width: 90%;
+    padding: 8px 0;
+    background: #547c61;
+    color: #fff;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 15px;
+  }
+  .line {
+    width: 90%;
+    height: 1px;
+    background: #547c61;
+    margin: 8px 0;
+  }
+  .detail_info {
+    width: 90%;
+    p {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 5px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+    span {
+      display: flex;
+      justify-content: flex-start;
+    }
+    .info_ico {
+      width: 20%;
+      background: #547c61;
+      border-radius: 10px 0 0 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      padding: 10px 0;
+    }
+    .info_txt {
+      width: calc(80% - 5px);
+      border: 1px solid #547c61;
+      border-radius: 0 10px 10px 0;
+      font-size: 12px;
+      color: #555;
+      padding: 5px;
+    }
+  }
+  .info_desc {
+    width: 90%;
+    height: auto;
+    border: 1px solid #547c61;
+    padding: 10px;
+    font-size: 12px;
+    font-weight: 400;
+    color: #555;
+  }
+  #map {
+    width: 90%;
+    height: 200px;
+    margin-top: 10px;
+    border: 1px solid #547c61;
+    padding: 5px;
   }
 }
