--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,11 @@ span.bar_line:nth-child(2) {
           animation: start 0.5s 1;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+#landing.started {
+  top: -100%;
 }
 #landing .landing_logo {
   background: #fff;
@@ -223,6 +228,14 @@ span.bar_line:nth-child(2) {
   font-weight: 400;
   font-size: 16px;
   margin: 10px 0;
+  -webkit-animation: show-up 1s 1;
+          animation: show-up 1s 1;
+  transform: translateY(200px);
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  opacity: 0;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
 }
 
 .contents_bar {
